--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name
-server.port
+spring.application.name=shop
+server.port=9090
 
 # data source config
 
-spring.datasource.url
-spring.datasource.username
-spring.datasource.password
+spring.datasource.url=jdbc:
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #enable sql script for table creation
